Change to my profile picture

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="column is-6 right-image " data-aos="fade-left">
               <img
                 class="is-rounded"
-                src="https://picsum.photos/id/366/600/375"
+                src="img/TrackRunny.png" width="420"
                 alt=""
               />
             </div>
