Update news section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
             </div>
             <div class="column is-10 has-text-centered is-offset-1">
               <h2 class="subtitle">
-                No exciting news yet! Stay updated and maybe I'll post something eventually 🤣
+                Currently experimenting with cryptocurrency hardware wallets as a way to store my funds.
+                <br>
+                Also doing Discord bot commissions now for those who are looking for custom Discord bots 🤖.
               </h2>
             </div>
           </div>
