--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       <!-- Begin Footer -->
       <div class="footer">
         <p>
-          Last updated on: <b>May 26, 2020</b> | Provided by <b>lichKing112</b>
+          Last updated on: <b>June 10th, 2020</b> | Provided by <b>lichKing112</b>
         </p>
       </div>
     
