Update about me

--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
             >
               <p class="is-larger">
                 &emsp;&emsp;<strong>
-                  I'm a Python and Java developer who currently spends time writing code.
-                  I currently also manage other things such as working with cryptocurrency,
-                  and building my own computers. At the moment I'm working on only a couple projects,
-                  but as time moves on I'll be doing more down the road.
+                  Hello, I'm TrackRunny. I currently am a Java and Python programmer who spends time 
+                  creating and working on projects. I'll be working on more projects later down the 
+                  road once I become more free in time. 
+                  I also am a cryptocurrency investor and enthusiast, I do believe in cryptocurrency
+                  for the future in that it could become widespread one day.
+                  Sometimes I build computers in my spare time as well. 
                 </strong>
               </p>
             </div>
@@ -315,7 +317,7 @@
       <!-- Begin Footer -->
       <div class="footer">
         <p>
-          Last updated on: <b>June 10th, 2020</b> | Provided by <b>lichKing112</b>
+          Last updated on: <b>July 7th, 2020</b> | Provided by <b>lichKing112</b>
         </p>
       </div>
     
