Add html header for tor browser

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <meta property="og:image" content="https://trackrunny.codes/img/TrackRunny.png" />
     <meta property="og:description" content="Personal website for TrackRunny with information about himself. Check back regularly for any new news / updates that are happening." />
     <meta name="theme-color" content="#1F2C6C" />
+    <meta http-equiv="onion-location" content="http://track6mven4pa32vseoxa62tpbaeirlwloz2i4lgwfpvwvrf6gkohsid.onion/" />
     <title>TrackRunny</title>
     <!-- Stylesheets & Icons -->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css"/>
@@ -316,7 +317,7 @@
       <!-- Begin Footer -->
       <div class="footer">
         <p>
-          Last updated on: <b>September 7th, 2020</b> | Provided by <b>lichKing112</b>
+          Last updated on: <b>October 17th, 2020</b> | Provided by <b>lichKing112</b>
         </p>
       </div>
     
