change spacing for donations

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
              <br />
           </div>
  
-          <div class="columns is-12">
+          <div class="columns is-">
    
              <!-- Bitcoin Address -->
        &emsp;&emsp;
-             <div class="column is-4 has-text-centered" data-aos="fade-in" data-aos-easing="linear">
+             <div class="column is-5 has-text-centered is-centered is-vcentered" data-aos="fade-in" data-aos-easing="linear">
                 <img src="img/Bitcoin.png" width="128" height="128"/>
                 <hr />
  
@@ -225,7 +225,7 @@
              </div>
  
              <!-- Ethereum Address -->
-             <div class="column is-4 has-text-centered" data-aos="fade-in" data-aos-easing="linear">
+             <div class="column is-5 has-text-centered is-centered is-vcentered" data-aos="fade-in" data-aos-easing="linear">
                 <img src="img/Ethereum.png" width="128" height="128"/>
                 <hr />
  
@@ -240,7 +240,7 @@
              </div>
  
              <!-- Litecoin Address -->
-             <div class="column is-4 has-text-centered" data-aos="fade-in" data-aos-easing="linear">
+             <div class="column is-5 has-text-centered is-centered is-vcentered" data-aos="fade-in" data-aos-easing="linear">
                 <img src="img/Litecoin.png" width="128" height="128"/>
                 <hr />
  
@@ -257,7 +257,7 @@
      
       &emsp;&emsp;
           <!-- Monero Addreas -->
-          <div class="column is-4 has-text-centered" data-aos="fade-in" data-aos-easing="linear">
+          <div class="column is-5 has-text-centered is-centered is-vcentered" data-aos="fade-in" data-aos-easing="linear">
              <img src="img/Monero.png" width="128" height="128"/>
              <hr />
  
@@ -272,7 +272,7 @@
           </div>
      
           <!-- Paypal Address -->
-          <div class="column is-4 has-text-centered" data-aos="fade-in" data-aos-easing="linear">
+          <div class="column is-5 has-text-centered is-centered is-vcentered" data-aos="fade-in" data-aos-easing="linear">
              <img src="img/Paypal.png" width="128" height="128"/>
              <hr />
  
@@ -285,7 +285,6 @@
              </h2>
  
           </div>
- 
        </div>
     </div>
  </div>
